# domain/items/dto/items.register.dto.ts
@@ -3,17 +3,19 @@ import {ItemBuilder} from "../items";
 export class ItemRegisterRequest {
 
     private readonly _user_id: bigint;
-    private readonly _item_type: string;
+    private readonly _purpose: string;
     private readonly _category: string;
     private readonly _name: string;
+    private readonly _description: string;
     private readonly _img_name: string;
     private readonly _img_url: string;
 
-    constructor(user_id: bigint, item_type: string, category: string, name: string, img_name: string, img_url: string) {
+    constructor(user_id: bigint, item_type: string, category: string, name: string, description: string, img_name: string, img_url: string) {
         this._user_id = user_id;
-        this._item_type = item_type;
+        this._purpose = item_type;
         this._category = category;
         this._name = name;
+        this._description = description;
         this._img_name = img_name;
         this._img_url = img_url;
     }
@@ -30,6 +32,10 @@ export class ItemRegisterRequest {
         return this._name;
     }
 
+    get description(): string {
+        return this._description;
+    }
+
     get img_name(): string {
         return this._img_name;
     }
@@ -38,17 +44,18 @@ export class ItemRegisterRequest {
         return this._img_url;
     }
 
-    get item_type(): string {
-        return this._item_type;
+    get purpose(): string {
+        return this._purpose;
     }
 
     public toItem(){
         return new ItemBuilder()
             .userId(this.user_id)
-            .itemType(this.item_type)
+            .itemType(this.purpose)
             .category(this.category)
             .tradeStatus("BEFORE")
             .name(this.name)
+            .description(this.description)
             .imgName(this.img_name)
             .imgUrl(this.img_url)
             .build();
