# swagger/swagger-output.json
@@ -12,10 +12,35 @@
     "http"
   ],
   "paths": {
+    "/api/health-check": {
+      "get": {
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
     "/api/users": {
       "get": {
-        "summary": "홈 화면",
-        "description": "홈 화면 API",
+        "summary": "르방이들 홈 화면",
+        "description": "르방이들 화면 API",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string",
+            "required": true
+          },
+          {
+            "name": "range",
+            "in": "path",
+            "type": "number",
+            "required": true
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK",
@@ -26,92 +51,137 @@
                   "type": "array",
                   "items": {
                     "properties": {
-                      "user_id": {
-                        "type": "number",
-                        "description": "유저 PK"
-                      },
-                      "username": {
-                        "type": "string",
-                        "description": "닉네임"
-                      },
-                      "kakao_talk_chatting_url": {
-                        "type": "string",
-                        "description": "채팅 URL"
-                      },
                       "item_id": {
                         "type": "number",
-                        "description": "아이템 PK"
+                        "description": "상품 id"
                       },
-                      "item_type": {
+                      "img_url": {
                         "type": "string",
-                        "description": "상품이 내꺼인지 상대꺼 인지"
-                      },
-                      "category": {
-                        "type": "string",
-                        "description": "상품 카테고리"
-                      },
-                      "trade_status": {
-                        "type": "string",
-                        "description": "상품 상"
+                        "description": "상품 이미지 링크"
                       },
                       "name": {
                         "type": "string",
                         "description": "상품 이름"
                       },
-                      "img_name": {
-                        "type": "string",
-                        "description": "이미지 이름"
+                      "description": {
+                        "type": "number",
+                        "description": "상품 상세정보"
                       },
-                      "img_url": {
+                      "category": {
                         "type": "string",
-                        "description": "이미지 URL"
+                        "description": "상품 카테고리",
+                        "example": "CLOTH, THINGS, BOOK, LIVE_THINGS, BABY_THINGS, EXPERIENCE"
+                      },
+                      "kakao_talk_chatting_url": {
+                        "type": "string",
+                        "description": "사용자 오픈 채팅방"
                       }
                     }
                   }
                 },
-                "experience_items": {
+                "all_experience_items": {
                   "type": "array",
                   "items": {
                     "properties": {
-                      "user_id": {
-                        "type": "number",
-                        "description": "유저 PK"
-                      },
-                      "username": {
-                        "type": "string",
-                        "description": "닉네임"
-                      },
-                      "kakao_talk_chatting_url": {
-                        "type": "string",
-                        "description": "채팅 URL"
-                      },
                       "item_id": {
                         "type": "number",
-                        "description": "아이템 PK"
+                        "description": "상품 id"
                       },
-                      "item_type": {
+                      "img_url": {
                         "type": "string",
-                        "description": "상품이 내꺼인지 상대꺼 인지"
-                      },
-                      "category": {
-                        "type": "string",
-                        "description": "상품 카테고리"
-                      },
-                      "trade_status": {
-                        "type": "string",
-                        "description": "상품 상"
+                        "description": "상품 이미지 링크"
                       },
                       "name": {
                         "type": "string",
                         "description": "상품 이름"
                       },
-                      "img_name": {
-                        "type": "string",
-                        "description": "이미지 이름"
+                      "description": {
+                        "type": "number",
+                        "description": "상품 상세정보"
                       },
-                      "img_url": {
+                      "category": {
                         "type": "string",
-                        "description": "이미지 URL"
+                        "description": "상품 카테고리",
+                        "example": "CLOTH, THINGS, BOOK, LIVE_THINGS, BABY_THINGS, EXPERIENCE"
+                      },
+                      "kakao_talk_chatting_url": {
+                        "type": "string",
+                        "description": "사용자 오픈 채팅방"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "요청 파라미터가 부족합니다",
+            "schema": {
+              "properties": {
+                "message": {
+                  "type": "string",
+                  "example": "요청 파라미터가 부족합니다"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "페이지를 찾을 수 없습니다",
+            "schema": {
+              "properties": {
+                "message": {
+                  "type": "string",
+                  "example": "페이지를 찾을 수 없습니다"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "서버 내부 오류입니다",
+            "schema": {
+              "properties": {
+                "message": {
+                  "type": "string",
+                  "example": "서버 내부 오류입니다"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/users/profiles": {
+      "get": {
+        "summary": "나의 르방",
+        "description": "나의 르방 조회 API",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "items": {
+                  "type": "array",
+                  "items": {
+                    "properties": {
+                      "item_id": {
+                        "type": "number",
+                        "description": "상품 id"
+                      },
+                      "name": {
+                        "type": "number",
+                        "description": "상품 이름"
+                      },
+                      "trade_status": {
+                        "type": "string",
+                        "description": "상품 나눔 상태"
                       }
                     }
                   }
@@ -157,8 +227,8 @@
     },
     "/api/users/sign-in": {
       "post": {
-        "summary": "로그인",
-        "description": "사용자 로그인 API",
+        "summary": "르방이들 로그인",
+        "description": "르방이들 로그인 API",
         "parameters": [
           {
             "name": "body",
@@ -244,9 +314,14 @@
     },
     "/api/users/sign-in/address": {
       "post": {
-        "summary": "사용자 주소 입력",
-        "description": "사용자 주소 입력 API",
+        "summary": "르방이들 사용자 주소 입력",
+        "description": "르방이들 사용자 주소 입력 API",
         "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
           {
             "name": "body",
             "in": "body",
@@ -320,6 +395,11 @@
         "description": "상품 등록 API",
         "parameters": [
           {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
             "name": "body",
             "in": "body",
             "schema": {
@@ -327,21 +407,25 @@
               "properties": {
                 "image": {
                   "type": "number",
-                  "description": "사진 데이터"
+                  "description": "상품 사진 바이너리 데이터"
                 },
                 "name": {
                   "type": "string",
                   "description": "상품 이름"
+                },
+                "description": {
+                  "type": "string",
+                  "description": "상품 상세정보"
                 },
                 "category": {
                   "type": "string",
                   "description": "상품 카테고리",
                   "example": "CLOTH, THINGS, BOOK, LIVE_THINGS, BABY_THINGS, EXPERIENCE"
                 },
-                "item_type": {
+                "purpose": {
                   "type": "string",
-                  "description": "상품 타입",
-                  "example": "MINE, OPPONENT"
+                  "description": "상품 나눔 혹은 원하는 타입",
+                  "example": "SHARE, WANT"
                 }
               }
             }
@@ -383,6 +467,40 @@
                 }
               }
             }
+          }
+        }
+      }
+    },
+    "/api/items/status": {
+      "put": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "item_id": {
+                  "type": "string",
+                  "description": "상품 id"
+                },
+                "trade_status": {
+                  "type": "string",
+                  "description": "상품 나눔 여부"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
           }
         }
       }
